[package]
name = "hope_ship"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
prost-types = "0.9"
mio = { version = "0.8", features = ["os-poll", "net"] }

[build-dependencies]
prost-build = "0.9"